--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "webpack"
+		"build": "webpack --config config/webpack.prod.js",
+		"start": "webpack serve --config config/webpack.dev.js"
 	},
 	"author": "Ivan- (iam.ivansantana@gmail.com)",
 	"license": "ISC",
@@ -25,7 +26,9 @@
 		"sass-loader": "^12.4.0",
 		"style-loader": "^3.3.1",
 		"webpack": "^5.65.0",
-		"webpack-cli": "^4.9.1"
+		"webpack-cli": "^4.9.1",
+		"webpack-dev-server": "^4.7.1",
+		"webpack-merge": "^5.8.0"
 	},
 	"browserslist": "> 0.25%, not dead, not ie 11"
 }
